--- a/ANLEITUNG/index.html
+++ b/ANLEITUNG/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Ultimate SEO URLs 3.0.10 für Zen-Cart 1.5.7 deutsch</title>
+<title>Ultimate SEO URLs 3.0.11 für Zen-Cart 1.5.7 deutsch</title>
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="content-language" content="de">
@@ -12,7 +12,7 @@
 <body>
 <div id="wrapper">
 <div id="header">
-<h1>Ultimate SEO URLs 3.0.10 für Zen-Cart 1.5.7 deutsch</h1>
+<h1>Ultimate SEO URLs 3.0.11 für Zen-Cart 1.5.7 deutsch</h1>
 </div>
 
 <div id="slidetabsmenu" style="display: none;">
@@ -38,7 +38,7 @@
 
   <p>Ultimate SEO URLs  schreibt die Seiten in Zen-Cart auf "schönere" URLs um. <br>
     <br>
-  Version 3.0.10 ist nur für Zen Cart 1.5.7 deutsch geeignet und behebt etliche Bugs aus älteren Ultimate SEO Versionen und bringt einige neue Features:<br>
+  Version 3.0.11 ist nur für Zen Cart 1.5.7 deutsch geeignet und behebt etliche Bugs aus älteren Ultimate SEO Versionen und bringt einige neue Features:<br>
   <br>
     Die Endung der Seiten kann  via Admin eingestellt werden (standardmäßig gar keine Endung). Möglich sind aber auch .html oder .htm.<br>
     Es kann eingestellt werden ob nur der Artikelname, Kategoriename oder auch zusätzlich der Name der jeweiligen Oberkategorien in den Link aufgenommen werden soll.<br>
@@ -61,7 +61,9 @@ Die umgeschriebenen URLs können gecached werden.  <br>
 <p>This contribution is subject to version 2.0 of the GPL license available through the world-wide-web at the following url:<br>
   <a href="http://www.zen-cart-pro.at/license/3_0.txt">http://www.zen-cart-pro.at/license/3_0.txt</a></p>
   <h3>Changelog</h3>
-   <p>3.0.10<br/>
+   <p>3.0.11<br/>2022-03-10<br/>
+ Bugfix: Admin Session ID wird aus genererierten Frontend Links ausgefiltert.<br/><br/>
+ 3.0.10<br/>
    2022-02-14<br/>
    Bugfixes in:<br/>
    includes/classes/usu.php<br/>
@@ -226,12 +228,12 @@ Oder ich bekomme einen Internal Server Error 500?
 <div class="tabcontent" id="sc5" style="display: block;">
 <div class="textcontent">
 <div class="regularlist">
-<h2>Download &amp; Support</h2>
-<p>Download des Moduls:</p>
-<p><a href="https://www.zen-cart-pro.at/forum/vbdownloads.php?categoryid=16" target="_blank">www.zen-cart-pro.at/forum/vbdownloads.php?categoryid=16</a></p>
+<h2>Download</h2>
+<p>Dieses Modul steht kostenlos auf Github zum Download bereit.</p>
+<p>Freigegebene getestete Versionen für den Einsatz in Livesystemen ausschließlich auf Github unter Releases herunterladen:<br>
+  <a href="https://github.com/zencartpro/157-modul-ultimate-seo-urls/releases" target="_blank"><b>https://github.com/zencartpro/157-modul-ultimate-seo-urls/releases</b></a></p>
 
-<p>Supportforum zum Modul:</p>
-<p><a href="https://www.zen-cart-pro.at/forum/forums/130-Ultimate-SEO-URLs">www.zen-cart-pro.at/forum/forums/130-Ultimate-SEO-URLs</a></p>
+
 </div>
 </div>
 </div>
@@ -244,7 +246,10 @@ Oder ich bekomme einen Internal Server Error 500?
 
 <h2>Unterstützen</h2>
 <p>Sie finden dieses Modul nützlich?</p>
-<p>Unterstützen Sie die Weiterentwicklung der deutschen Zen Cart Version.<br/>Wir freuen uns über Spenden zur Finanzierung des Servers und der vBulletin-Lizenz: </p>
+<p>Es steht Ihnen kostenfrei im Rahmen der GNU General Public License zur Verfügung. <br>
+  Sie können diese Software kostenfrei benutzen, Änderungen vornehmen, etc.<br/>
+Da wir Ihnen diese Software kostenfrei zur Verfügung stellen, freuen wir uns über Spenden.<br>
+Diese Spenden helfen uns, die Kosten für die Wartung, Upgrades und die stetige Weiterentwicklung dieser Software für Ihren Online-Shop zu decken.</p>
 <p><a href="https://donorbox.org/spende-fur-die-weiterentwicklung-der-deutschen-zen-cart-version" target="_blank"><img src="https://www.zen-cart-pro.at/zencartpro-donation-white.png" alt="Spende für die Weiterentwicklung der deutschen Zen Cart Version" title="Spende für die Weiterentwicklung der deutschen Zen Cart Version"></a></p>
 <br/><br/>
 <p>Du bist Entwickler und willst helfen, die deutsche Zen Cart Version noch besser zu machen?<br>
