Anleitung mit Updateanleitung ergänzt

--- a/ANLEITUNG/index.html
+++ b/ANLEITUNG/index.html
@@ -195,7 +195,7 @@ RewriteBase /onlineshop/<br>
   DEINADMIN/includes/languages/german/extra_definitions/usu.php</p>
 <p>Achten Sie darauf, dass Sie Ihre .htaccess anpassen, sie enthält zwei neue Umschreibungen für die Unterstützung der ask_a_question und product_reviews_write pages!<br>
   Die Vorlage dazu finden Sie im Ordner HTACCESS<br>
-  Um diese beiden Seitentypen umzuschreiben, erweitern Sie Ihre Definitionen unter Konfiguration &gt; Ultimate SEO URLS mit:<br>
+  Um diese beiden Seitentypen umzuschreiben, erweitern Sie Ihre Definitionen unter Konfiguration &gt; Ultimate SEO URLS &gt; Seiten die umgeschrieben werden sollen mit:<br>
   ask_a_question,product_reviews_write  <br>
 </p>
   <h2>FAQ</h2>
