--- a/ANLEITUNG/index.html
+++ b/ANLEITUNG/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Ultimate SEO URLs 3.1.0 für Zen-Cart 1.5.7 deutsch</title>
+<title>Ultimate SEO URLs 3.1.1 für Zen-Cart 1.5.7 deutsch</title>
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="content-language" content="de">
@@ -12,7 +12,7 @@
 <body>
 <div id="wrapper">
 <div id="header">
-<h1>Ultimate SEO URLs 3.1.0 für Zen-Cart 1.5.7 deutsch</h1>
+<h1>Ultimate SEO URLs 3.1.1 für Zen-Cart 1.5.7 deutsch</h1>
 </div>
 
 <div id="slidetabsmenu" style="display: none;">
@@ -38,7 +38,7 @@
 
   <p>Ultimate SEO URLs  schreibt die Seiten in Zen-Cart auf "schönere" URLs um. <br>
     <br>
-  Version 3.1.0 ist nur für Zen Cart 1.5.7 deutsch geeignet und behebt etliche Bugs aus älteren Ultimate SEO Versionen und bringt einige neue Features:<br>
+  Version 3.1.1 ist nur für Zen Cart 1.5.7 deutsch geeignet und behebt etliche Bugs aus älteren Ultimate SEO Versionen und bringt einige neue Features:<br>
   <br>
     Die Endung der Seiten kann  via Admin eingestellt werden (standardmäßig gar keine Endung). Möglich sind aber auch .html oder .htm.<br>
     Es kann eingestellt werden ob nur der Artikelname, Kategoriename oder auch zusätzlich der Name der jeweiligen Oberkategorien in den Link aufgenommen werden soll.<br>
@@ -59,13 +59,17 @@ NEU seit Version 3.1.0:<br>
   </p>
 <h3>Copyright,  Lizenz</h3>
 <p>Copyright dieser deutschen Anpassung/Anleitung für Zen-Cart 1.5.7 deutsch<br>
-(c) 2017-2023 webchills (<a href="http://www.webchills.at" target="_blank">www.webchills.at</a>)</p>
+(c) 2017-2024 webchills (<a href="http://www.webchills.at" target="_blank">www.webchills.at</a>)</p>
 <p>deutsche Übersetzung/Anpassung des Moduls Ultimate SEO URLs von lat9<br>
   <a href="http://www.zen-cart.com/downloads.php?do=file&id=202" target="_blank">http://www.zen-cart.com/downloads.php?do=file&amp;id=132</a></p>
 <p>This contribution is subject to version 2.0 of the GPL license available through the world-wide-web at the following url:<br>
   <a href="http://www.zen-cart-pro.at/license/3_0.txt">http://www.zen-cart-pro.at/license/3_0.txt</a></p>
   <h3>Changelog</h3>
-   <p>3.1.0<br/>
+   <p>3.1.1<br/>
+     2024-10-30<br/>
+    Fix for PHP fatal error when $_GET['main_page'] is an array<br>
+     <br>
+   3.1.0<br/>
      2023-02-03<br/>
      Unterstützung für ask_a_question Seiten<br>
 Unterstützung für product_reviews_write Seiten<br>
